--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <img
               src="./assets/palmeiras3.jpg"
               class="rounded-circle"
-              alt="Plmeiras1"
+              alt="Palmeiras3"
             />
             <div class="card-body">
               <h2 class="card-title text-muted">Heading</h2>
