--- a/index.html
+++ b/index.html
@@ -63,24 +63,23 @@
     </nav>
 
     <!-- ----------------------------------------------------------- -->
-    <!-- ---------------------- Caroucel --------------------------- -->
-
+    <!-- ---------------------- Carousel --------------------------- -->
     <section
       id="carouselExampleCaptions"
       class="carousel slide"
       data-bs-ride="carousel"
     >
-    <ol class="carousel-indicators">
+      <ol class="carousel-indicators">
         <li
-        data-bs-target="#carouselExampleCaptions"
-        data-bs-slide-to="0"
-        class="active"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="0"
+          class="active"
         ></li>
         <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
         <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-               <!-------------- Slide 01 ---------------->
+      </ol>
+      <div class="carousel-inner">
+        <!-------------- Slide 01 ---------------->
         <div class="carousel-item active">
           <img
             src="./assets/Carousel.png"
@@ -101,24 +100,27 @@
             </button>
           </div>
         </div>
-               <!-------------- Slide 02 ---------------->
+        <!-------------- Slide 02 ---------------->
         <div class="carousel-item">
           <img
             src="./assets/Carousel.png"
             class="d-block w-100"
             alt="Carousel"
           />
-          <div class="carousel-caption d-none d-md-block ">
+          <div class="carousel-caption d-none d-md-block">
             <h1>Another example headline.</h1>
 
-            <h5>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit</h5>
+            <h5>
+              Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec
+              id elit non mi porta gravida at eget metus. Nullam id dolor id
+              nibh ultricies vehicula ut id elit
+            </h5>
             <button type="button" class="btn btn-lg btn-primary">
               Sing up Today
             </button>
           </div>
-
         </div>
-                <!-------------- Slide 03 ---------------->
+        <!-------------- Slide 03 ---------------->
         <div class="carousel-item">
           <img
             src="./assets/Carousel.png"
@@ -128,14 +130,16 @@
           <div class="carousel-caption d-none d-md-block text-end">
             <h1>One more for good measure.</h1>
             <h5>
-              Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+              Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec
+              id elit non mi porta gravida at eget metus. Nullam id dolor id
+              nibh ultricies vehicula ut id elit.
             </h5>
-             <button type="button" class="btn btn-lg btn-primary">
+            <button type="button" class="btn btn-lg btn-primary">
               Sing up Today
             </button>
           </div>
         </div>
-                <!--------------------------------->
+        <!--------------------------------->
       </div>
       <a
         class="carousel-control-prev"
@@ -229,7 +233,6 @@
       <!-- ----------------------- Infos ----------------------------- -->
 
       <section id="infos">
-
         <!--------------------- Item 01 --------------------------->
         <div class="row inverter">
           <div class="col-md-7">
@@ -269,7 +272,6 @@
           </div>
         </div>
 
-
         <!--------------------- Item 03 --------------------------->
 
         <div class="row inverter">
@@ -290,17 +292,19 @@
           </div>
         </div>
       </section>
+    </div>
+    <!--------------------------------------------------------------->
+    <!-------------------------- Footer ----------------------------->
 
-      <!--------------------------------------------------------------->
-      <!-------------------------- Footer ----------------------------->
+    <footer class="container f-right">
+      <p class="text-muted">
+        © 2017-2018 Company, Inc. ·<a href="#">Privacy</a> ·<a href="#"
+          >Terms</a
+        >
+      </p>
 
-      <footer class="container f-right">
-
-          <p class="text-muted">© 2017-2018 Company, Inc. ·<a href="#">Privacy</a> ·<a href="#">Terms</a> </p>
-
-          <a href="#">Back to top</a>
-
-      </footer>
+      <a href="#">Back to top</a>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
