--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <!-- ----------------------------------------------------------- -->
     <!-- ---------------------- NavNar ----------------------------- -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Carousel</a>
         <button
@@ -89,7 +89,7 @@
           <div class="carousel-caption text-start">
             <h1>Example headline.</h1>
 
-            <h5>
+            <h5 class="carousel-text">
               Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec
               id elit non mi porta gravida at eget metus. Nullam id dolor id
               nibh ultricies vehicula ut id elit.
@@ -110,7 +110,7 @@
           <div class="carousel-caption d-none d-md-block">
             <h1>Another example headline.</h1>
 
-            <h5>
+            <h5 class="carousel-text">
               Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec
               id elit non mi porta gravida at eget metus. Nullam id dolor id
               nibh ultricies vehicula ut id elit
@@ -129,7 +129,7 @@
           />
           <div class="carousel-caption d-none d-md-block text-end">
             <h1>One more for good measure.</h1>
-            <h5>
+            <h5 class="carousel-text">
               Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec
               id elit non mi porta gravida at eget metus. Nullam id dolor id
               nibh ultricies vehicula ut id elit.
@@ -174,7 +174,7 @@
               alt="Plmeiras1"
             />
             <div class="card-body">
-              <h2 class="card-title text-muted">Heading</h2>
+              <h2 class="card-title text-muted card-info-title">Heading</h2>
               <p class="card-text text-muted">
                 Donec sed odio dui. Etiam porta sem malesuada magna mollis
                 euismod. Nullam id dolor id nibh ultricies vehicula ut id elit.
@@ -195,7 +195,7 @@
               alt="Plmeiras1"
             />
             <div class="card-body">
-              <h2 class="card-title text-muted">Heading</h2>
+              <h2 class="card-title text-muted card-info-title">Heading</h2>
               <p class="card-text text-muted">
                 Donec sed odio dui. Etiam porta sem malesuada magna mollis
                 euismod. Nullam id dolor id nibh ultricies vehicula ut id elit.
@@ -216,7 +216,7 @@
               alt="Palmeiras3"
             />
             <div class="card-body">
-              <h2 class="card-title text-muted">Heading</h2>
+              <h2 class="card-title text-muted card-info-title">Heading</h2>
               <p class="card-text text-muted">
                 Donec sed odio dui. Etiam porta sem malesuada magna mollis
                 euismod. Nullam id dolor id nibh ultricies vehicula ut id elit.
@@ -236,7 +236,7 @@
         <!--------------------- Item 01 --------------------------->
         <div class="row inverter">
           <div class="col-md-7">
-            <h2>
+            <h2 class="card-info-title">
               First featurette heading.
               <span class="text-muted">It'll blow your mind.</span>
             </h2>
@@ -256,7 +256,7 @@
 
         <div class="row inverter">
           <div class="col-md-7">
-            <h2>
+            <h2 class="card-info-title">
               Oh yeah, it's that good.
               <span class="text-muted">See for yourself.</span>
             </h2>
@@ -276,7 +276,7 @@
 
         <div class="row inverter">
           <div class="col-md-7">
-            <h2>
+            <h2 class="card-info-title">
               And lastly, this one.
               <span class="text-muted">Checkmate.</span>
             </h2>
